--- a/_includes/figure.liquid
+++ b/_includes/figure.liquid
@@ -58,6 +58,9 @@
           {% if include['max-height'] %}
             max-height: {{ include.max-height }};
           {% endif %}
+          {% if include.rotation %}
+            transform: rotate({{ include.rotation }});
+          {% endif %}
         "
       {% endif %}
       {% if include.alt %}
