--- a/_includes/figure.liquid
+++ b/_includes/figure.liquid
@@ -44,7 +44,7 @@
       {% else %}
         height="auto"
       {% endif %}
-      {% if include['min-width'] or include['min-height'] or include['max-width'] or include['max-height'] %}
+      {% if include['min-width'] or include['min-height'] or include['max-width'] or include['max-height'] or include['rotate'] %}
         style="
           {% if include['min-width'] %}
             min-width: {{ include.min-width }};
@@ -58,7 +58,7 @@
           {% if include['max-height'] %}
             max-height: {{ include.max-height }};
           {% endif %}
-          {% if include.rotation %}
+          {% if include['rotate'] %}
             transform: rotate({{ include.rotation }});
           {% endif %}
         "
