--- a/_includes/figure.liquid
+++ b/_includes/figure.liquid
@@ -59,7 +59,7 @@
             max-height: {{ include.max-height }};
           {% endif %}
           {% if include['rotate'] %}
-            transform: rotate({{ include.rotation }});
+            transform: rotate({{ include.rotate }});
           {% endif %}
         "
       {% endif %}
